# toy-computer

./: .gitignore  CLAUDE.md  LICENSE  Pipfile  README.md  apply-path-to-site.py  pipenv-path-to-site.py  pyproject.toml
antlr/idl/: gen_antlr.bat  gen_antlr.sh  toy-asm-embeded.g4  toy-asm.g4  toy_asm.g4
dasm/: fib.asm  fib.c  function-memory.asm  function-memory.c  qsort.asm  qsort.c
src/: main.py
src/console/: console_executor.py  main.py
src/console_executor/: main.py
src/cs/grammar/: toy_asm.interp  toy_asm.tokens  toy_asmBaseListener.cs  toy_asmBaseVisitor.cs  toy_asmLexer.cs  toy_asmLexer.tokens  toy_asmListener.cs  toy_asmParser.cs  toy_asmVisitor.cs
src/grammar/: __init__.py  computer.py  operations.py  program.py  toy_asm.interp  toy_asm.tokens  toy_asmLexer.interp  toy_asmLexer.py  toy_asmLexer.tokens  toy_asmListener.py  toy_asmParser.py  toy_asmVisitor.py  visitor_impl.py
src/internal/: test.py
src/internal/computer/: __init__.py  computer.py  executor_base.py  op.py  op_base.py  operand.py  operations.py  state.py
src/internal/grammar/: compiler.py  toy_asm.interp  toy_asm.tokens  toy_asmLexer.interp  toy_asmLexer.py  toy_asmListener.py  toy_asmParser.py  toy_asmVisitor.py  visitor_impl.py
src/py/: main.py
src/py/computer/: __init__.py  computer.py  (+1 more)
src/tests/: 1-2.asm  1.asm  2-syntax-error.asm  2.asm  3.asm  4.asm  div.asm  fib.asm  func_frame.asm  prime.asm  twin-primes.asm
src/web_backend/: uvicorn_log.yaml  webserver.py
src/web_frontend/: Caddyfile  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
(+65 files in other folders)
